[sample] Reorganized MainActivity to allow for various other samples

--- a/confetti-sample/src/main/AndroidManifest.xml
+++ b/confetti-sample/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ShoweringConfettiActivity" />
+
     </application>
 
 </manifest>
