[sample] Added another sample with falling from a point

--- a/confetti-sample/src/main/AndroidManifest.xml
+++ b/confetti-sample/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ShoweringConfettiActivity" />
+        <activity android:name=".FallingConfettiFromTopActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".FallingConfettiFromPointActivity"
+            android:parentActivityName=".MainActivity" />
 
     </application>
 
