--- a/confetti/build.gradle
+++ b/confetti/build.gradle
@@ -8,15 +8,12 @@ android {
         minSdkVersion 12
         targetSdkVersion 24
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     testCompile 'junit:junit:4.12'
 }
+
+apply from: './gradle-mvn-push.gradle'
