--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-VERSION_NAME=0.1.0-SNAPSHOT
+VERSION_NAME=0.1.0
 GROUP=com.github.jinatonic.confetti
 
 POM_DESCRIPTION=An Android particle system that helps displays confetti!
