Properly support TTL and fade out

--- a/confetti-sample/src/main/AndroidManifest.xml
+++ b/confetti-sample/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
             android:parentActivityName=".MainActivity" />
         <activity android:name=".FallingConfettiFromPointActivity"
             android:parentActivityName=".MainActivity" />
+        <activity android:name=".ExplosionActivity"
+            android:parentActivityName=".MainActivity" />
 
     </application>
 
