Add animation listener interface for the ConfettiManager

--- a/confetti-sample/src/main/AndroidManifest.xml
+++ b/confetti-sample/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             android:parentActivityName=".MainActivity" />
         <activity android:name=".FallingWithTouchActivity"
             android:parentActivityName=".MainActivity" />
+        <activity android:name=".FallingConfettiWithListenerActivity"
+            android:parentActivityName=".MainActivity" />
 
     </application>
 
