--- a/confetti-sample/build.gradle
+++ b/confetti-sample/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.github.jinatonic.confetti.sample"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 25
     }
     buildTypes {
         release {
@@ -18,6 +18,7 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':confetti')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    compile project(path: ':confetti')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:25.3.1'
 }
