--- a/confetti/build.gradle
+++ b/confetti/build.gradle
@@ -1,13 +1,19 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         minSdkVersion 12
-        targetSdkVersion 26
+        targetSdkVersion 25
     }
+}
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    testCompile 'junit:junit:4.12'
 }
 
 apply from: './gradle-mvn-push.gradle'
