--- a/confetti-sample/build.gradle
+++ b/confetti-sample/build.gradle
@@ -19,5 +19,6 @@ android {
 
 dependencies {
     implementation project(path: ':confetti')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.annotation:annotation:1.0.2'
 }
